@@ -2475,9 +2475,7 @@ dispatch:
       proc = x;
     badfun:
       /* scm_everr (x, env,...) */
-      scm_misc_error (NULL,
-		      "Wrong type to apply: ~S",
-		      scm_listify (proc, SCM_UNDEFINED));
+      scm_misc_error (NULL, "Wrong type to apply: ~S", SCM_LIST1 (proc));
     case scm_tc7_vector:
     case scm_tc7_wvect:
 #ifdef HAVE_ARRAYS
